--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "63, Sangwon-gil, Seongdong-gu, Seoul, Republic 
 resume_header_contact_info:     "Seoul, Republic of Korea, Seongdong-gu • 01033787300 • sunhanbee@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>함께하는 것을 좋아하는 6년차 개발자 선한비입니다 : ) <br> 개발뿐 아니라 기획,디자인과의 협업이 중요하다고 생각합니다. <br> 질문하고 도전하는 것을 두려워 하지 않는 법을 터득하고 있습니다.</p>"
+resume_header_intro: "<p>함께하는 것을 좋아하는 6년차 개발자 선한비입니다. <br> 개발뿐 아니라 기획,디자인과의 협업을 위해 질문하고 도전하는 것을 두려워 하지 않습니다.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
